fix image overlap

--- a/src/modules/Main/Main.module.css
+++ b/src/modules/Main/Main.module.css
@@ -111,7 +111,7 @@
 @media (min-width: 961px) {
     .container {
         height: fit-content;
-        /* min-height: 800px; */
+        min-height: 600px;
     }
 
     .middleText {
@@ -120,12 +120,11 @@
     }
 
     .title {
-        min-width: 700px;
-        min-height: 300px;
-
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        width: max-content;
     }
 
     .content {
@@ -135,8 +134,7 @@
 
     .imgContainer {
         position: relative;
-        transform: scale(1.5);
-        transform-origin: right;
+        z-index: 1;
     }
 
     .btn {
